--- a/acmeair-mainapp/src/main/webapp/loader.html
+++ b/acmeair-mainapp/src/main/webapp/loader.html
@@ -69,7 +69,7 @@
     
     function loadLoaderConfigData() {
     	dojo.xhrGet({
-			url: basePath.concat('customer/loader/query'),
+			url: 'http://' + window.location.host + '/customer/acmeair-cs/rest/api/customer/loader/query',
 			handleAs: "text",
 			load: function(response, ioArgs) {
 				updateFormData(response);
@@ -91,7 +91,7 @@
     		content : {
     			numCustomers: dijit.byId('customerSizeInput').value
     		},
-    		url: basePath.concat('customer/loader/load'),
+    		url: 'http://' + window.location.host + '/customer/acmeair-cs/rest/api/customer/loader/load',
     		load: function(response, ioArgs) {
     			hideWaitDialog();
     			alert('Customer Database Loaded, response: ' + response);
@@ -106,7 +106,7 @@
     function loadFlightDB() {
     	showWaitDialog();
     	dojo.xhrGet({
-    		url: basePath.concat('flights/loader/load'),
+    		url: 'http://' + window.location.host + '/flight/acmeair-fs/rest/api/flights/loader/load',
     		load: function(response, ioArgs) {
     			hideWaitDialog();
     			alert('Flight Database Loaded, response: ' + response);
@@ -122,7 +122,7 @@
      function clearSessionDB() {
     	showWaitDialog();
     	dojo.xhrGet({
-    		url: basePath.concat('login/loader/load'),
+    		url: 'http://' + window.location.host + '/auth/acmeair-as/rest/api/login/loader/load',
     		load: function(response, ioArgs) {
     			hideWaitDialog();
     			alert('Session Database Cleared, response: ' + response);
@@ -138,7 +138,7 @@
      function clearBookingDB() {
     	showWaitDialog();
     	dojo.xhrGet({
-    		url: basePath.concat('bookings/loader/load'),
+    		url: 'http://' + window.location.host + '/booking/acmeair-bs/rest/api/bookings/loader/load',
     		load: function(response, ioArgs) {
     			hideWaitDialog();
     			alert('Booking Database Cleared, response: ' + response);
