--- a/acmeair-mainapp/src/main/webapp/checkin.html
+++ b/acmeair-mainapp/src/main/webapp/checkin.html
@@ -48,7 +48,7 @@
 		    	var grid, store, dataStore;
 		    	
 		    	dojo.xhrGet({
-					url: "rest/api/bookings/byuser/" + dojo.cookie("loggedinuser"),
+					url: 'http://' + window.location.host + "/booking/acmeair-bs/rest/api/bookings/byuser/" + dojo.cookie("loggedinuser"),
 					handleAs: "json",
 					load: function(response, ioArgs) {
 						var theData = { items : response };
@@ -158,7 +158,7 @@
 				
 				dojo.xhrPost({
 					content : xhrContent,
-					url : 'rest/api/bookings/cancelbooking',
+					url : 'http://' + window.location.host + '/booking/acmeair-bs/rest/api/bookings/cancelbooking',
 					load : function(response, ioArgs) {
 						alert("Booking Canceled.");
 						createAndStartGrid();
